--- a/css/stylos.css
+++ b/css/stylos.css
@@ -1,3 +1,11 @@
+*, *:after, *:before {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
 body {
     background: #E5E5E5;
     width: auto;
@@ -118,6 +126,10 @@ main {
 @media screen and (max-width: 859px) {
     .panelIzquierdo, .panelDerecho {
         width: 100%;
+    }
+
+    .panelIzquierdo div button {
+        margin-bottom: 20px;
     }
 
     .panelDerecho {
